objects/blng__BillingSchedule__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BilledAmount__c</fullName>
        <label>Billed Amount</label>
        <summarizedField>blng__BillingTransaction__c.blng__AmountToBeBilled__c</summarizedField>
        <summaryFilterItems>
            <field>blng__BillingTransaction__c.blng__Status__c</field>
            <operation>equals</operation>
            <value>Billed</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__BillingTransaction__c.blng__BillingSchedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__InvoicePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Plan</label>
        <referenceTo>blng__InvoicePlan__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedulesInvoicePlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__NumberOfBilledBillingTransactions__c</fullName>
        <label>Number of Billed Billing Transactions</label>
        <summaryFilterItems>
            <field>blng__BillingTransaction__c.blng__Status__c</field>
            <operation>equals</operation>
            <value>Billed</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__BillingTransaction__c.blng__BillingSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__NumberOfBillingTransactions__c</fullName>
        <label>Number of Billing Transactions</label>
        <summaryForeignKey>blng__BillingTransaction__c.blng__BillingSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__NumberOfCanceledBillingTransactions__c</fullName>
        <label>Number of Canceled Billing Transactions</label>
        <summaryFilterItems>
            <field>blng__BillingTransaction__c.blng__CalculatedStatus__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__BillingTransaction__c.blng__BillingSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedulesOrderProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <formula>IF(blng__BilledAmount__c == blng__Amount__c, &quot;Billed&quot;, 
  IF((blng__NumberOfBillingTransactions__c != 0 &amp;&amp; blng__NumberOfBillingTransactions__c = blng__NumberOfCanceledBillingTransactions__c), &quot;Cancelled&quot;, &quot;Pending&quot;)
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <label>Tax City (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <label>Tax Country (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <label>Tax State (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <label>Tax Street 1 (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <label>Tax Postal Code (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Billing Schedule</label>
    <nameField>
        <label>Billing Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>